factor out AuthConstants, don't trim decoded username and password ...
... when handling basic authentication